# UnityMLPlayground

./: .gitignore  Makefile  pyproject.toml
Assets/DodgingAgent/Models/: drone_dgx_beefy_v5.onnx
Assets/DodgingAgent/Prefabs/Agents/: DroneAgent.prefab
Assets/DodgingAgent/Prefabs/Areas/: DroneArea.prefab  DroneWarehouseArea.prefab
Assets/DodgingAgent/Resources/Materials/: MapHologram.mat  MapView.renderTexture  PostProcessing.asset  White.mat
Assets/DodgingAgent/Scripts/Agents/: DroneAgent.cs
Assets/DodgingAgent/Scripts/Core/: DroneResetter.cs  RandomizePosition.cs
Assets/DodgingAgent/Scripts/Sensors/: ISensorImu.cs  ISensorSpatialLidar.cs  SensorLidar.cs  SensorSpatialLidar.cs
Assets/DodgyBall/Scripts/: AttackHandler.cs  AttackOrchestrator.cs  Attacker.cs  CustomSwing.cs  DirectedArc.cs  DodgerAgent.cs  EfficientSword.cs  NormalSword.cs  Orchestrator.cs  PlaneBuilder.cs  PlaneStepper.cs  SwordDriver.cs  editSword.cs  mlSword.cs
Assets/DodgyBall/prefabs/: TrainingArea.prefab
Assets/DodgyBall/prefabs/weapons/: KatanaEdit.prefab  KatanaPrefab.prefab
Assets/ML-Agents/Timers/: DodgyBall_timers.json
Assets/Scenes/: DodgyBall.unity  Inference.unity  InferenceDodgyBall.unity  Playground.unity  Smaller Agent Scene.unity  Training.unity
Assets/Scenes/training/: Train 1.unity  Train 2.unity  Train 3.unity
ProjectSettings/: EditorBuildSettings.asset  TagManager.asset
